tests/neg/ghost-case-class.scala
case class Foo1(ghost x: Int) // error
